<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="8dp"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:minHeight="192sp"
        android:textSize="64sp"
        android:background="#ffffff"
        android:id="@+id/textInput"
        android:gravity="end|center_vertical"
        android:maxLength="12"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginRight="8dp"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="fill"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInput"
        app:layout_goneMarginTop="8dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnSeven"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/seven"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnEight"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/eight"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnNine"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/nine"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnSign"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/brown_button"
                android:onClick="onOperator"
                android:text="@string/sign"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/brown_button"
                android:onClick="onDelete"
                android:text="@string/delete"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnFour"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/four"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnFive"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/five"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnSix"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/six"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/black_button"
                android:onClick="onOperator"
                android:text="@string/multiply"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/black_button"
                android:onClick="onOperator"
                android:text="@string/divide"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/one"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnTwo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/two"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnThree"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/three"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/black_button"
                android:onClick="onOperator"
                android:text="@string/plus"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnSubtract"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/black_button"
                android:onClick="onOperator"
                android:text="@string/minus"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/red_button"
                android:onClick="onClear"
                android:text="@string/clear"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnZero"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_button"
                android:onClick="onDigit"
                android:text="@string/zero"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/white_button"
                android:onClick="onDecimalPoint"
                android:text="@string/dot"
                android:textSize="30sp"
                android:textColor="#003d99"
                style="?android:attr/borderlessButtonStyle"/>


            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:background="@drawable/blue_button"
                android:onClick="onEqual"
                android:text="@string/equal"
                android:textSize="30sp"
                android:textColor="#ffffff"
                style="?android:attr/borderlessButtonStyle"/>

        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>